Renaming Compose Extension to Messaging Extension
