# CSharp/Microsoft.Bot.Schema.Teams/AttachmentExtensions.cs
@@ -18,11 +18,11 @@ namespace Microsoft.Bot.Schema.Teams
         /// <param name="attachment">The attachment.</param>
         /// <param name="previewAttachment">The preview attachment.</param>
         /// <returns>Compose extension attachment.</returns>
-        public static ComposeExtensionAttachment ToComposeExtensionAttachment(this Attachment attachment, Attachment previewAttachment = null)
+        public static MessagingExtensionAttachment ToComposeExtensionAttachment(this Attachment attachment, Attachment previewAttachment = null)
         {
             // We are recreating the attachment so that JsonSerializerSettings with ReferenceLoopHandling set to Error does not generate error
             // while serializing. Refer to issue - https://github.com/OfficeDev/BotBuilder-MicrosoftTeams/issues/52.
-            return new ComposeExtensionAttachment
+            return new MessagingExtensionAttachment
             {
                 Content = attachment.Content,
                 ContentType = attachment.ContentType,
